# actix-example

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  benchmark.yml  docker-compose.prod.yml  docker-compose.yml  okteto.yml
apps/core/: Cargo.toml  Dockerfile
apps/core/src/: main.rs
apps/core/src/api/v1/: mod.rs
apps/core/src/common/: mod.rs
apps/core/src/configs/: mod.rs
apps/core/src/configs/database/: mod.rs
apps/core/src/posts/: controller.rs  router.rs
apps/core/src/root/: controller.rs
k8s/: app-deployment.yml  app-service.yml  app-svc.yml  db.yml  mysql-pv.yml  mysql.yml  namespace.yml  redis.yml
migration/: Cargo.toml
src/: main.rs
src/common/: app_state.rs  base_paging_query.rs
src/configs/database/: mod.rs
src/posts/: controller.rs  router.rs
src/root/: router.rs
