[package]
name = "core"
version = "0.1.0"
authors = ["Sam Samai <sam@studio2pi.com.au>"]
edition = "2021"
publish = false

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-http = "3.2.1"
actix-redis = "0.12.0"
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-web = "4.1.0"
dotenv = "0.15.0"
entity = { path = "packages/entity" }
fake = "2.5.0"
listenfd = "1.0.0"
migration = { path = "packages/migration" }
rand = "0.8.5"
sea-orm = { version = "0.9.2", features = ["debug-print", "runtime-actix-native-tls", "sqlx-postgres"] }
serde = "1.0.144"
serde_json = "1.0.85"
tera = "1.17.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
